# video-analytics

./: Makefile.Mac  README.md  cpplint.py
src/: aiSaac.h  (+4 more)
src/dependencies/datk/: CMakeLists.txt  README.txt  testing
src/dependencies/datk/src/: datk.h
src/dependencies/datk/src/machinelearning/: Classifiers.cc  Classifiers.h  datkMachineLearning.h
src/dependencies/datk/src/machinelearning/SVM/: L1SmoothSVM.cc  L1SmoothSVM.h  L2HingeSVM.cc  L2HingeSVM.h  L2SmoothSVM.cc  L2SmoothSVM.h
src/dependencies/datk/src/machinelearning/logisticRegression/: L1LogisticRegression.cc  L1LogisticRegression.h  L2LogisticRegression.cc  L2LogisticRegression.h
src/dependencies/datk/src/optimization/contAlgorithms/: cg.cc  cg.h  contAlgorithms.h  gd.cc  gd.h  gdBarzilaiBorwein.cc  gdBarzilaiBorwein.h  gdLineSearch.cc  gdLineSearch.h  gdNesterov.cc  gdNesterov.h  lbfgsMin.cc  lbfgsMin.h  lbfgsMinOwl.cc  lbfgsMinOwl.h  sgd.cc  sgd.h  sgdAdagrad.cc  sgdAdagrad.h  sgdDecayingLearningRate.cc  sgdDecayingLearningRate.h  sgdLineSearch.cc  sgdLineSearch.h  sgdRegularizedDualAveraging.cc  sgdRegularizedDualAveraging.h  sgdRegularizedDualAveragingAdagrad.cc  sgdRegularizedDualAveragingAdagrad.h  sgdStochasticAverageGradient.cc  sgdStochasticAverageGradient.h  tron.cc  tron.h
src/dependencies/datk/src/optimization/contAlgorithms/specialized/: L1LRPrimal.cc  L1LRPrimal.h  SVCDual.cc  SVCDual.h  SVRDual.cc  SVRDual.h
src/dependencies/datk/src/optimization/contFunctions/: ContinuousFunctions.cc  ContinuousFunctions.h  L1HuberSVMLoss.cc  L1HuberSVMLoss.h  L1LeastSquaresLoss.cc  L1LeastSquaresLoss.h  L1LogisticLoss.cc  L1LogisticLoss.h  L1ProbitLoss.cc  L1ProbitLoss.h  L1SmoothSVMLoss.cc  L1SmoothSVMLoss.h  L2HingeSVMLoss.cc  L2HingeSVMLoss.h  L2HingeSVRLoss.cc  L2HingeSVRLoss.h  L2HuberSVMLoss.cc  L2HuberSVMLoss.h  L2LeastSquaresLoss.cc  L2LeastSquaresLoss.h  L2LogisticLoss.cc  L2LogisticLoss.h  L2ProbitLoss.cc  L2ProbitLoss.h  L2SmoothSVMLoss.cc  L2SmoothSVMLoss.h  L2SmoothSVRLoss.cc  L2SmoothSVRLoss.h  contFunctions.h
src/dependencies/datk/src/optimization/contFunctions/deprecated/: HingeSVMLoss.cc  HingeSVMLoss.h  HingeSVRLoss.cc  HingeSVRLoss.h  HuberSVMLoss.cc  HuberSVMLoss.h  L1.cc  L1.h  L2.cc  L2.h  LeastSquaresLoss.cc  LeastSquaresLoss.h  LogisticLoss.cc  LogisticLoss.h  ProbitLoss.cc  ProbitLoss.h  SimpleFunctions.cc  SimpleFunctions.h  SmoothSVMLoss.cc  SmoothSVMLoss.h  SmoothSVRLoss.cc  SmoothSVRLoss.h  SumContinuousFunctions.cc  SumContinuousFunctions.h
src/dependencies/datk/src/optimization/discAlgorithms/: TODOList.txt  bidirGreedyMax.cc  bidirGreedyMax.h  dataPartitionGreedyUniform.cc  dataPartitionGreedyUniform.h  discAlgorithms.h  distributedGreedy.cc  distributedGreedy.h  increment.cc  increment.h  lazierThanLazy.cc  lazierThanLazy.h  lazyGreedyMax.cc  lazyGreedyMax.h  lazyGreedyMaxKnapsack.cc  lazyGreedyMaxKnapsack.h  lazyGreedyMaxOrdering.cc  lazyGreedyMaxOrdering.h  lazyGreedySC.cc  lazyGreedySC.h  localSearchMax.cc  localSearchMax.h  mminCC.cc  mminCC.h  mminSCSC.cc  mminSCSC.h  mminSCSK.cc  mminSCSK.h  naiveGreedyMax.cc  naiveGreedyMax.h  naiveGreedyMaxOrdering.cc  naiveGreedyMaxOrdering.h  revlazyGreedyMax.cc  revlazyGreedyMax.h  secretaryGreedy.cc  secretaryGreedy.h  sieveStreamGreed.cc  sieveStreamGreed.h  streamGreedy.cc  streamGreedy.h
src/dependencies/datk/src/optimization/discAlgorithms/deprecated/: algoUtils.h  minNormPoint.cc  minNormPoint.h  mminDS.cc  mminDS.h  mminModMod.cc  mminModMod.h  mminSubSup.cc  mminSubSup.h  mminSupSub.cc  mminSupSub.h  mminUC.cc  mminUC.h  randomizedGreedyMax.cc  randomizedGreedyMax.h  revlazyGreedyMax.cc  revlazyGreedyMax.h
src/dependencies/datk/src/optimization/discFunctions/: DisparityMin.cc  DisparityMin.h  DisparitySum.cc  DisparitySum.h  FacilityLocation.cc  FacilityLocation.h  FacilityLocationSparse.cc  FacilityLocationSparse.h  FeatureBasedFunctions.cc  FeatureBasedFunctions.h  FeatureBasedFunctionsDense.cc  FeatureBasedFunctionsDense.h  GraphCutFunctions.cc  GraphCutFunctions.h  MMR.cc  MMR.h  ModularFunctions.cc  ModularFunctions.h  ProbabilisticSetCover.cc  ProbabilisticSetCover.h  SaturateCoverage.cc  SaturateCoverage.h  SetCover.cc  SetCover.h  SetFunctions.cc  SetFunctions.h  SubmodularFunctions.cc  SubmodularFunctions.h  TODOList.txt  discFunctions.h
src/dependencies/datk/src/optimization/discFunctions/deprecated/: BipartiteNeighborhoodFunctions.cc  BipartiteNeighborhoodFunctions.h  FacilityLocationSparseDB.cc  FacilityLocationSparseDB.h  FeatureBasedFunctionsDB.cc  FeatureBasedFunctionsDB.h  FeatureBasedFunctionsTwoLayerDense.cc  FeatureBasedFunctionsTwoLayerDense.h
src/dependencies/datk/src/optimization/discFunctions/operations/: AddSubmodularFunctions.cc  AddSubmodularFunctions.h  CombineSubmodularFunctions.cc  CombineSubmodularFunctions.h  ComplementSubmodularFunctions.cc  ComplementSubmodularFunctions.h  ConcaveSubmodularFunctions.cc  ConcaveSubmodularFunctions.h  DifferenceSubmodularFunctions.cc  DifferenceSubmodularFunctions.h  DifferenceSubmodularModularFunctions.cc  DifferenceSubmodularModularFunctions.h  IntersectSubmodularFunctions.cc  (+5 more)
src/dependencies/datk/src/representation/: DenseFeature.cc  DenseFeature.h  FileIO.cc  FileIO.h  Matrix.cc  Matrix.h  MatrixOperations.cc  MatrixOperations.h  Set.cc  Set.h  SparseFeature.cc  SparseFeature.h  SparseGraph.h  SparseRepresentation.h  Vector.h  VectorOperations.cc  VectorOperations.h  datkRepresentation.h  fileHandling.cc  misc.h  testFeatureRep.cc
src/dependencies/datk/src/representation/deprecated/: SparseRepresentation.cc  fileHandling.h
src/dependencies/datk/src/utils/: arguments.cc  arguments.h  datkUtils.h  utils.h
src/dependencies/datk/test/: TestClassification.cc  TestClassificationLibSVM.cc  TestL1HuberSVMLoss.cc  TestL1LeastSquaresLoss.cc  TestL1LogisticLoss.cc  TestL1ProbitLoss.cc  TestL1SmoothSVMLoss.cc  TestL2HingeSVMLoss.cc  TestL2HingeSVRLoss.cc  TestL2HuberSVMLoss.cc  TestL2LeastSquaresLoss.cc  TestL2LogisticLoss.cc  TestL2LogisticLossArgs.cc  TestL2ProbitLoss.cc  TestL2SmoothSVMLoss.cc  TestL2SmoothSVRLoss.cc  TestSubmodularFunctions.cc
(+392 files in other folders)
